@@ -1,6 +1,6 @@
 /*
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
- * Copyright 2022 GIP SmartMercial GmbH, Germany
+ * Copyright 2024 Xyna GmbH, Germany
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@ package com.gip.xyna.xact.filter.util.xo;
 
 
 
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
@@ -31,6 +32,7 @@ import com.gip.xyna.utils.misc.JsonParser.UnexpectedJSONContentException;
 import com.gip.xyna.xdev.exceptions.XDEV_PARAMETER_NAME_NOT_FOUND;
 import com.gip.xyna.xdev.xfractmod.xmdm.GeneralXynaObject;
 import com.gip.xyna.xdev.xfractmod.xmdm.XynaObjectList;
+import com.gip.xyna.xfmg.xfctrl.XynaFactoryControl;
 import com.gip.xyna.xfmg.xfctrl.classloading.ClassLoaderBase;
 import com.gip.xyna.xfmg.xfctrl.classloading.ClassLoaderDispatcher;
 import com.gip.xyna.xfmg.xfctrl.classloading.ClassLoaderType;
@@ -227,12 +229,11 @@ public class XynaObjectVisitor extends EmptyJsonVisitor<GeneralXynaObject> {
       Class<?> clazz = null;
       try {
         clazz = deriveClassFromInfo();
-        object = (GeneralXynaObject) clazz.newInstance();
-      } catch (XNWH_OBJECT_NOT_FOUND_FOR_PRIMARY_KEY | Ex_FileAccessException | XPRC_XmlParsingException | ClassNotFoundException
-          | InstantiationException | IllegalAccessException | XPRC_InvalidPackageNameException e) {
+        object = (GeneralXynaObject) clazz.getConstructor().newInstance();
+      } catch (Exception e) {
         
         try{
-          java.lang.reflect.Constructor c = getConstructor(clazz);
+          Constructor<?> c = getConstructor(clazz);
           c.setAccessible(true);
           object = (GeneralXynaObject)c.newInstance();
         }
@@ -244,8 +245,8 @@ public class XynaObjectVisitor extends EmptyJsonVisitor<GeneralXynaObject> {
     return object;
   }
   
-  private java.lang.reflect.Constructor getConstructor(Class<?> clazz){
-    java.lang.reflect.Constructor[] candidates = clazz.getDeclaredConstructors();
+  private Constructor<?> getConstructor(Class<?> clazz){
+    Constructor<?>[] candidates = clazz.getDeclaredConstructors();
     
     for(int i=0; i<candidates.length; i++){
       if(candidates[i].getParameterCount() == 0)
@@ -313,10 +314,9 @@ public class XynaObjectVisitor extends EmptyJsonVisitor<GeneralXynaObject> {
     if (GenerationBase.isReservedServerObjectByFqClassName(fqClassName)) {
       return GenerationBase.getReservedClass(info.getFqName());
     }
-    Long revision = XynaFactory.getInstance().getFactoryManagement().getXynaFactoryControl().getRevisionManagement()
-        .getRevision(info.getRuntimeContext());
-    revision = XynaFactory.getInstance().getFactoryManagement().getXynaFactoryControl().getRuntimeContextDependencyManagement()
-        .getRevisionDefiningXMOMObjectOrParent(info.getFqName(), revision);
+    XynaFactoryControl factryCtl = XynaFactory.getInstance().getFactoryManagement().getXynaFactoryControl();
+    Long revision = factryCtl.getRevisionManagement().getRevision(info.getRuntimeContext());
+    revision = factryCtl.getRuntimeContextDependencyManagement().getRevisionDefiningXMOMObjectOrParent(info.getFqName(), revision);
     XMOMType type = XMOMType.getXMOMTypeByRootTag(GenerationBase.retrieveRootTag(info.getFqName(), revision));
     ClassLoaderDispatcher cld = XynaFactory.getInstance().getFactoryManagement().getXynaFactoryControl().getClassLoaderDispatcher();
     ClassLoaderBase cl = cld.getClassLoaderByType(deriveClassLoader(type), fqClassName, revision);
